[package]
name = "tempo"
version = "0.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "A Rust templating library"
license = "MIT"

[dependencies]
error-chain = "0.10"
regex = "0.2"
clap = "2.24"

[lib]
name = "tempo"
path = "src/lib.rs"

[[bin]]
name = "tempo"
path = "tools/tempo.rs"
